--- a/.env.example
+++ b/.env.example
@@ -11,11 +11,11 @@ MONGODB_URI=
 // 7. Generate a new client secret and copy that too.
 // 8. Once your application is deployed, edit the homepage & callback URLs to match your deployment URL.
 
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
+GITHUB_CLIENT_ID=081659b9063a9f9867ad
+GITHUB_CLIENT_SECRET=11cf3f2da1159a44c6c6c89ee5faafb56f572162
 
 // Generate one here: https://generate-secret.vercel.app/32
-NEXTAUTH_SECRET=
+NEXTAUTH_SECRET=e2c82fec219c8940a6c685a4b6a27647
 
 // You don't need to define this variable in prod (only for localhost)
-NEXTAUTH_URL=http://localhost:3000/api/auth
+//NEXTAUTH_URL=http://localhost:3000/api/auth
